--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "normalize.css": "^8.0.1",
         "sass": "^1.49.9"
     }
 }
