--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,8 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     globals:
         siteName: 'Educ Pluto'
+    form_themes:
+        - 'bootstrap_5_layout.html.twig'
 
 when@test:
     twig:
